Fix alignment of the x button with latest changes

--- a/src/main/content/_assets/css/openliberty.scss
+++ b/src/main/content/_assets/css/openliberty.scss
@@ -663,14 +663,14 @@ a {
                 float: right;
                 color: white;
                 margin-top: 8px;
-                margin-right: 28px;
+                margin-right: 37px;
 
                 &:hover {
                     cursor: pointer;
                 }
 
                 @media screen and (max-width: 767px){
-                    margin-right: 13px;
+                    margin-right: 22px;
                 }
             }
         }
